@@ -1,10 +1,13 @@
 (function(){
     "use strict";
         
-    /* Обьект содержащий все функции и переменные 
+    var main                = global.cloudcmd.main,
+    
+    /*
+     * Обьект содержащий все функции и переменные 
      * серверной части Cloud Commander'а
-     */
-    var CloudServer         = {
+     */    
+        CloudServer         = {
         /* base configuration */
         Config          : {
             server    : true,
@@ -50,19 +53,17 @@
          * Поддержка браузером JS */
         NoJS            : true,
         /* Поддержка gzip-сжатия браузером */
-        Gzip            : undefined,
+        Gzip            : false,
         
         /* server varible */
-        Server          :{},
+        Server          : {},
         
         /* КОНСТАНТЫ */
-        INDEX           : __dirname + '/' + 'index.html'
+        INDEX           : main.DIR + '/' + 'index.html'
     },
         DirPath             = '/',
         
         OK                  = 200,
-        
-        main                = global.cloudcmd.main,
         
         DIR                 = main.Dir,
         LIBDIR              = main.LIBDIR,
